# ziwei

./: .bandit  .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  PRODUCT.md  README.md  __scan.json  __scan_result.json  _check_db.py  _check_split.ps1  _compare_full.py  _cross_validate.py  _run_pytest.ps1  _split_ziwei.ps1  _test_out.txt  alembic.ini  backends.py  bazi.py  boundary.py  constants.py  coverage.json  coverage_engine.json  db.py  deploy.ps1  deploy.sh  docker-compose.yml  ganzhi.py  init_db.py  interpret.py  models.py  pyproject.toml  pyrightconfig.json  pytest.ini  relations.py  requirements-dev.txt  (+12 more)
app/: __init__.py  app_assembly.py  bootstrap.py  config.py  docs_routes_setup.py  entrypoint_factory.py  error_handling.py  exceptions.py  health_routes_setup.py  http_middleware_setup.py  lifecycle.py  metrics_routes_setup.py  middleware_setup.py  openapi_docs.py  pkg_utils.py  router_setup.py  static_entrypoints.py  static_routes_setup.py
data/: bazi_extended.json  bazi_interpretations.json  bazi_rules.json  bazi_templates_samples.json  cities.json  classics.json  classics_yijing.json  concepts.json  dual_verify_cases.json  event_rules.json  glossary.json  ground_truth_cases.json  life_suggestions_rules.json  name_eighty_one.json  name_sancai.json  name_suggest_chars.json  relation_golden_cases.json  remedies_rules.json  ziwei_classic_refs_generated.json  ziwei_ground_truth.json
docs/: 01-schemas.md  02-architecture.md  03-rbac-audit.md  04-implementation-checklist.md  CODE-REVIEW-2026-02-25.md  CODEBASE-OPTIMIZATION-ROADMAP-2026-04-01.md  CSP_SECURITY.md  DECISION-RECORD-2026-02-25.md  DEPLOYMENT-GUIDE.md  DEPLOY_SCRIPT_GUIDE.md  DEV-AUDIT-2026-07-12.md  DEV-AUDIT-2026-07-13.md  DEV-READINESS.md  DEVELOPMENT.md  DOCS-AUDIT.md  DOCUMENTATION-INDEX-2026-02-25.md  FINAL-ACCURACY-VALIDATION-2026-02-25.md  FUSHENG-DEV-AUTOPILOT.md  FUSHENG-DEV-HANDBOOK.md  FUSHENG-DEV-PIPELINE.md  FUSHENG-DEV-STATUS-2026-07-13.md  LAUNCH-READINESS-CHECKLIST-2026-02-25.md  LEGACY-SPA-MIGRATION-MATRIX.md  N7-gate-verification-report.md  OPTIMIZATION-1-permission-performance.md  OPTIMIZATION-2-event-recommendation.md  OPTIMIZATION-3-data-model.md  OPTIMIZATION-SUMMARY.md  README.md  (+14 more)
(+2170 files in other folders)
